fixed search bar on mobile

--- a/src/components/SearchBar/SearchBar.css
+++ b/src/components/SearchBar/SearchBar.css
@@ -53,6 +53,6 @@
     /* margin: 8px 0 0 60px; */
     font-size: 18px;
     color: #fff;
-    width: 350px;
+    width: 275px;
   }
 }
